Timeline text and overflow fixed + added problem statements in tracks

--- a/client/src/pages/Tracks/tracks.css
+++ b/client/src/pages/Tracks/tracks.css
@@ -81,6 +81,7 @@
 }
 
 .track {
+    position: relative;
     width: 50%;
     height: 100%;
     background-image: linear-gradient(#EBBD57, #B68506);
@@ -105,6 +106,21 @@
     font-size: 300%;
 }
 
+.problem-statement {
+    position: absolute;
+    font-size: 15px !important;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    top: -100%;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    transition: all 0.5s;
+    backdrop-filter: blur(15px);
+}
+
 @media only screen and (max-width: 1000px) {
     .track-box-container-1 {
         flex-direction: column;
@@ -122,5 +138,24 @@
     .main-tracks-container {
         padding: 20px;
         width: 80%;
+    }
+}
+
+
+@media only screen and (max-width: 1283px) {
+    .problem-statement {
+        font-size: 13px !important;
+    }
+}
+
+@media only screen and (max-width: 711px) {
+    .problem-statement {
+        font-size: 11px !important;
+    }
+}
+
+@media only screen and (max-width: 450px) {
+    .problem-statement {
+        font-size: 9px !important;
     }
 }
